Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-43617

Spurious empty "store" spans reported in Slow operation logging

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 7.0.0
    • 6.5.1, 6.6.0, 6.6.1, 6.5.0
    • memcached
    • Triaged
    • 1
    • Unknown
    • KV-Engine 2021-Jan

    Description

      When logging operations which exceed the slow threshold, if the operation involves a store step (i.e. most mutation commands), a spurious empty "store" span is reported - e.g.:

      2021-01-09T16:10:46.783219+01:00 WARNING 218: Slow operation. 
      {"cid":"4e7c4c9bea912d43/c80b74b45583b716/47b0b",
      "duration":"519 ms",
      "trace":"request=3441528251192265:519943 store=0:0 store=3441528771102475:19",
      "command":"SET",
      ...
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            drigby Dave Rigby (Inactive)
            drigby Dave Rigby (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              PagerDuty