MB-43617: ScopeTimer: Avoid creating temporary Listener objects

The ScopeTimer helper class is used to report a single timed duration
to multiple different Listeners (e.g. slow op tracing and timing
histograms).

However the current API copy-constructs the listeners into the
ScopeTimer object, which _can_ result in temporary Listener objects
being created (and subsequently destoyed) during the creation of the
ScopeTimer. Depending on compiler / optimization settings these
temporary objects _might_ be elided, but that's certainly not
guaranteed.

This is problematic as the temporary Listener objects can end up
recording that temporary duration to their respective sink. In the
case of trace logging, this can result in empty spurious tracr spans
being recorded, e.g.:

    2021-01-09T16:10:46.783219+01:00 WARNING 218: Slow operation.
    {"cid":"4e7c4c9bea912d43/c80b74b45583b716/47b0b",
    "duration":"519 ms",
    "trace":"request=3441528251192265:519943 store=0:0 store=3441528771102475:19",
                                             ^^^^^^^^^

Address this by modifying the API of ScopeTimer to forward the
Listener ctor arguments into ScopeTimer (via tuples), allowing
ScopeTimer to in-place construct the Listeners.

(Note there's a linked kv_engine patch to update the API usage.)

Change-Id: I5b1da3a3dc1fb9edd96d84420266058dac49bfa4
Reviewed-on: http://review.couchbase.org/c/platform/+/143519
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Trond Norbye <trond.norbye@couchbase.com>