include/platform/scope_timer.h
@@ -18,41 +18,39 @@
 #pragma once
 
 #include <chrono>
-#include <utility>
+#include <tuple>
 
 /**
  * Timer wrappers which provides a RAII-style mechanism for timing the duration
  * of sections of code; where multiple listeners can record the same duration.
  *
- * The motiviation for this class is we have regions of code which multiple
+ * The motivation for this class is we have regions of code which multiple
  * listeners want to time. We don't want to just have each listener perform
  * it's reading of the clock as that is (a) costly and (b) gives slightly
  * different time values to each listener. Instead, this class handles reading
  * the time (just once at start and stop); and then passes it onto each
  * listener.
  *
- * On construction, it reads the current time of the std::chrono::steady_clock;
- * and calls the start() method in each passed in listener object. On
- * destruction (i.e. when this object goes out of scope), reads
- * std::chrono::steady_clock::now a second time, and calls end() on each
- * listener object.
+ * On construction, it in-place constructs each of the Listener template
+ * parmeters, reads the current time of the std::chrono::steady_clock; and calls
+ * the start() method of each listener object. On destruction (i.e. when this
+ * object goes out of scope), reads std::chrono::steady_clock::now a second
+ * time, calls end() on each listener object, and then destructs the listeners.
  *
  * Example usage:
  *
  * {
  *     ... some scope we wish to time
  *     ScopedTimer2<MicrosecondsStopwatch, MicrosecondsStopwatch> timer
- *             (MicrosecondStopwatch(stats.histogram1),
- *             (MicrosecondStopwatch(stats.histogram2));
- *     // start() called on MicrosecondStopwatch
+ *             std::forward_as_tuple(stats.histogram1),
+ *             std::forward_as_tuple(stats.histogram2));
+ *     // start() called on both MicrosecondStopwatches
  *     ...
- *  } // at end of scope stop() called on MicrosecondStopwatch.
+ *  } // at end of scope stop() called on both MicrosecondStopwatches
  *
- * Note: The listener objects are passed by rvalue-reference; this is helpful
- *       as it means we can move them into the ScopeTimer object (and hence
- *       keep them around to call stop() on). However this doesn't implement
- *       perfect forwarding, so you should ensure the Listener object can be
- *       copied/moved safely.
+ * Note: Listeners are constructed in-place inside the ScopeTimer objects,
+ *       which avoids having to worry about temporary Listener objects being
+ *       created which could create spurious timer events
  *
  * Note(2): This initial implementation has a simple, dumb implementation of
  *       different classes for each count of listeners. It could well be
@@ -60,14 +58,17 @@
  *       this, but given we only ever use either 1 or 2 listeners that seems
  *       overkill at the present time :)
  */
+
+/**
+ * ScopeTimer taking one listener objects. Somewhat unnecessary, but provided
+ * for consistency / ease of moving between an N arg variant.
+ */
 template <class Listener1>
 class ScopeTimer1 {
 public:
-    ScopeTimer1(Listener1&& listener1_)
-        : startTime(std::chrono::steady_clock::now()),
-          listener1(std::forward<Listener1>(listener1_)) {
-        const auto startTime = std::chrono::steady_clock::now();
-        listener1.start(startTime);
+    template <typename... Args>
+    ScopeTimer1(Args&&... args) : listener1(std::forward<Args>(args)...) {
+        listener1.start(std::chrono::steady_clock::now());
     }
 
     ~ScopeTimer1() {
@@ -76,7 +77,6 @@ public:
     }
 
 private:
-    const std::chrono::steady_clock::time_point startTime;
     Listener1 listener1;
 };
 
@@ -84,10 +84,27 @@ private:
 template <class Listener1, class Listener2>
 class ScopeTimer2 {
 public:
-    ScopeTimer2(Listener1&& listener1_, Listener2&& listener2_)
-        : startTime(std::chrono::steady_clock::now()),
-          listener1(std::forward<Listener1>(listener1_)),
-          listener2(std::forward<Listener2>(listener2_)) {
+    /**
+     * Construct a ScopeTimer for two listener objects, taking the arguments
+     * for each underlying Listener as a std::tuple.
+     *
+     * Example:
+     *     ScopeTimer2<HdrMicroSecStopwatch, TracerStopwatch> timer(
+     *         std::forward_as_tuple(stats.getCmdHisto),
+     *         std::forward_as_tuple(cookie, cb::tracing::Code::Get));
+     *
+     * This is admittedly pretty verbose, but it _does_ guarantee that the
+     * Listener objects are constructed in-place inside ScopeTimer2, so
+     * usable for non-movable types, and avoids creating temporary Listener
+     * objects which could result in spurious durations being timed.
+     */
+    template <typename Args1, typename Args2>
+    ScopeTimer2(Args1&& args1, Args2&& args2)
+        : listener1(
+                  std::make_from_tuple<Listener1>(std::forward<Args1>(args1))),
+          listener2(
+                  std::make_from_tuple<Listener2>(std::forward<Args2>(args2))) {
+        auto startTime = std::chrono::steady_clock::now();
         listener1.start(startTime);
         listener2.start(startTime);
     }
@@ -99,7 +116,6 @@ public:
     }
 
 private:
-    const std::chrono::steady_clock::time_point startTime;
     Listener1 listener1;
     Listener2 listener2;
 };
